refactor(images): remove unused project images and update paths fix(links): correct relative paths for policy pages in English site feat(slider): replace CSS background images with inline img elements style(css): add responsive adjustments for CEO section and mobile nav perf(menu): improve mobile menu toggle logic and overlay behavior docs: add terms-of-service page with legal content structure

--- a/en/home.html
+++ b/en/home.html
@@ -85,7 +85,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 99999;
+    z-index: 2000000;
     pointer-events: none;
   }
   #preloader-logo {
@@ -385,7 +385,7 @@
           </div>
           <div id="w-node-_05e09dfb-0586-b400-c38e-2cc1ab36baf5-0aae306c" class="w-layout-layout quickstack wf-layout-layout">
             <div class="w-layout-cell">
-        <div class="image-wrapper residents"><img class="image" src="../images/Projects/GH220 الغدير/IMG_1621.jpg" alt="GH220 Al Ghadir" style="-webkit-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-100%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" data-w-id="62e83f71-fa10-d621-7c5e-1b5aadde244f" loading="lazy"></div>
+          <div class="image-wrapper residents"><img class="image" src="../images/GH210-GH220.JPG" alt="GH210-GH220" loading="lazy"></div>
             </div>
             <div class="w-layout-cell">
               <div class="details-wrapper">
@@ -471,8 +471,8 @@
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="../images/Projects/GH220 الغدير/IMG_1621.jpg" alt="GH220" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image six"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -486,8 +486,8 @@
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="../images/Projects/HT210 حطين/HT210_-__1_Page_1.png" alt="HT210" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image one"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -501,8 +501,8 @@
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="../images/Projects/RM240 الرمال/01.png" alt="RM240" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image two"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -516,8 +516,8 @@
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="../images/Projects/النــخـيل NK250/nk250-1.png" alt="NK250" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image three"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -532,8 +532,8 @@
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="../images/Projects/SA230 الصفا/نسخة من 01.png" alt="SA230" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image four"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -547,8 +547,8 @@
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="../images/Projects/YS190 اداور الياسمين/Artboard 1.png" alt="YS190" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image five"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -562,8 +562,8 @@
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="../images/YS200--KALMA-2-1-4.JPG" alt="YS200" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image seven"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -577,8 +577,8 @@
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="../images/Projects/JN130 الجنادرية/jn130-1.png" alt="JN130" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image eight"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -592,8 +592,8 @@
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="../images/Projects/HT260 ادوار حطين/حطين - HT260-1.png" alt="HT260" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image nine"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -732,13 +732,13 @@
               </div>
             </div>
             <div class="terms-div left">
-              <a href="../privacy-policy.html" class="page-link w-inline-block">
+            <a href="privacy-policy.html" class="page-link w-inline-block">
                 <h5 class="terms-heading">Privacy policy</h5>
               </a>
               <a href="../terms-of-service.html" class="page-link w-inline-block">
                 <h5 class="terms-heading">Terms of service</h5>
               </a>
-              <a href="../cookie-policy.html" class="page-link w-inline-block">
+            <a href="cookie-policy.html" class="page-link w-inline-block">
                 <h5 class="terms-heading">Cookie policy</h5>
               </a>
             </div>
