--- a/en/projects.html
+++ b/en/projects.html
@@ -957,13 +957,13 @@
           </div>
         </div>
         <div class="terms-div left">
-          <a href="../privacy-policy.html" class="page-link w-inline-block">
+            <a href="privacy-policy.html" class="page-link w-inline-block">
             <h5 class="terms-heading">Privacy policy</h5>
           </a>
           <a href="../terms-of-service.html" class="page-link w-inline-block">
             <h5 class="terms-heading">Terms of service</h5>
           </a>
-          <a href="../cookie-policy.html" class="page-link w-inline-block">
+            <a href="cookie-policy.html" class="page-link w-inline-block">
             <h5 class="terms-heading">Cookie policy</h5>
           </a>
         </div>
