--- a/index.html
+++ b/index.html
@@ -94,16 +94,10 @@ Author: @Goodnbad.exe
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 101000;
+    z-index: 2000000;
     pointer-events: none;
   }
   
-  /* Ensure preloader stays behind mobile menu on mobile devices */
-  @media (max-width: 991px) {
-    #preloader {
-      z-index: 10000;
-    }
-  }
   #preloader-logo {
     width: 120px;
     height: auto;
@@ -471,8 +465,8 @@ Author: @Goodnbad.exe
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="images/Projects/GH220 الغدير/IMG_1621.jpg" alt="GH220" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image six"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -486,8 +480,8 @@ Author: @Goodnbad.exe
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="images/Projects/HT210 حطين/HT210_-__1_Page_1.png" alt="HT210" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image one"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -501,8 +495,8 @@ Author: @Goodnbad.exe
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="images/Projects/RM240 الرمال/01.png" alt="RM240" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image two"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -516,8 +510,8 @@ Author: @Goodnbad.exe
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="images/Projects/النــخـيل NK250/nk250-1.png" alt="NK250" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image three"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -532,8 +526,8 @@ Author: @Goodnbad.exe
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="images/Projects/SA230 الصفا/نسخة من 01.png" alt="SA230" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image four"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -547,8 +541,8 @@ Author: @Goodnbad.exe
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="images/Projects/YS190 اداور الياسمين/Artboard 1.png" alt="YS190" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image five"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -562,8 +556,8 @@ Author: @Goodnbad.exe
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="images/YS200--KALMA-2-1-4.JPG" alt="YS200" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image seven"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -577,8 +571,8 @@ Author: @Goodnbad.exe
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="images/Projects/JN130 الجنادرية/jn130-1.png" alt="JN130" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image eight"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -592,8 +586,8 @@ Author: @Goodnbad.exe
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
+                      <img src="images/Projects/HT260 ادوار حطين/حطين - HT260-1.png" alt="HT260" loading="lazy" class="slide-photo">
                       <div style="display:block" class="speaker-image-cover"></div>
-                      <div class="member-image nine"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
