Final with perfect Localhost preview

--- a/en/about.html
+++ b/en/about.html
@@ -1320,6 +1320,8 @@
     });
   });
 </script>
+  <!-- Global Image Optimizer -->
+  <script src="../js/image-optimizer.js"></script>
   <script type="module">
     import { inject } from '@vercel/analytics';
     inject();
