--- a/en/terms-of-service.html
+++ b/en/terms-of-service.html
@@ -114,5 +114,7 @@
     </div>
 
     <script src="../js/webflow.js"></script>
-  </body>
+  <!-- Global Image Optimizer -->
+  <script src="../js/image-optimizer.js"></script>
+</body>
 </html>
