--- a/about.html
+++ b/about.html
@@ -1333,6 +1333,8 @@
     });
   });
 </script>
+  <!-- Global Image Optimizer -->
+  <script src="js/image-optimizer.js"></script>
   <script type="module">
     import { inject } from '@vercel/analytics';
     inject();
