--- a/en/home.html
+++ b/en/home.html
@@ -13,6 +13,9 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.jpg" rel="apple-touch-icon">
+  <!-- Preload hero images for reliable above-the-fold rendering -->
+  <link rel="preload" as="image" href="../images/Hero-1.JPG">
+  <link rel="preload" as="image" href="../images/Hero-2.JPG">
   <script type="module">
     import { inject } from '@vercel/analytics';
     inject();
@@ -488,7 +491,7 @@ ScrollTrigger.addEventListener("refresh", () => {});
                   <div class="speaker-slide-content">
                     <div class="slide-image">
                       <img src="../images/Projects/GH220 الغدير/IMG_1621.jpg" alt="GH220" loading="lazy" class="slide-photo">
-                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -503,7 +506,7 @@ ScrollTrigger.addEventListener("refresh", () => {});
                   <div class="speaker-slide-content">
                     <div class="slide-image">
                       <img src="../images/Projects/HT210 حطين/HT210_-__1_Page_1.png" alt="HT210" loading="lazy" class="slide-photo">
-                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -518,7 +521,7 @@ ScrollTrigger.addEventListener("refresh", () => {});
                   <div class="speaker-slide-content">
                     <div class="slide-image">
                       <img src="../images/Projects/RM240 الرمال/01.png" alt="RM240" loading="lazy" class="slide-photo">
-                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -533,7 +536,7 @@ ScrollTrigger.addEventListener("refresh", () => {});
                   <div class="speaker-slide-content">
                     <div class="slide-image">
             <img sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="../images/صور-NK250-dragged-p-500.jpg 500w, ../images/صور-NK250-dragged-p-800.jpg 800w, ../images/صور-NK250-dragged-p-1080.jpg 1080w, ../images/صور-NK250-dragged-p-1600.jpg 1600w, ../images/صور-NK250-dragged.jpg 1920w" src="../images/صور-NK250-dragged.jpg" alt="NK250" loading="lazy" class="slide-photo">
-                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -549,7 +552,7 @@ ScrollTrigger.addEventListener("refresh", () => {});
                   <div class="speaker-slide-content">
                     <div class="slide-image">
                       <img src="../images/Projects/SA230 الصفا/نسخة من 01.png" alt="SA230" loading="lazy" class="slide-photo">
-                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -564,7 +567,7 @@ ScrollTrigger.addEventListener("refresh", () => {});
                   <div class="speaker-slide-content">
                     <div class="slide-image">
 <img src="../images/Projects/YS190 اداور الياسمين/Artboard 1 copy 3.png" alt="YS190" loading="lazy" class="slide-photo">
-                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -579,7 +582,7 @@ ScrollTrigger.addEventListener("refresh", () => {});
                   <div class="speaker-slide-content">
                     <div class="slide-image">
                       <img src="../images/YS200--KALMA-2-1-4.JPG" alt="YS200" loading="lazy" class="slide-photo">
-                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -594,7 +597,7 @@ ScrollTrigger.addEventListener("refresh", () => {});
                   <div class="speaker-slide-content">
                     <div class="slide-image">
 <img src="../images/Projects/JN130 الجنادرية/jn130-2.png" alt="JN130" loading="lazy" class="slide-photo">
-                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -609,7 +612,7 @@ ScrollTrigger.addEventListener("refresh", () => {});
                   <div class="speaker-slide-content">
                     <div class="slide-image">
 <img src="../images/Projects/HT260 ادوار حطين/حطين - HT260-3 copy.png" alt="HT260" loading="lazy" class="slide-photo">
-                      <div style="display:block" class="speaker-image-cover"></div>
+                      <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
@@ -1286,6 +1289,33 @@ ScrollTrigger.addEventListener("refresh", () => {});
       }
       if (document.readyState === 'complete') enhance();
       else window.addEventListener('load', enhance);
+    })();
+  </script>
+  <!-- Global Image Optimizer -->
+  <script src="../js/image-optimizer.js"></script>
+  <!-- Global image reliability: add lazy-loading, eager for critical hero images, and fallbacks -->
+  <script>
+    (function(){
+      var FALLBACK_SRC = '/images/webclip.jpg'; // root-relative works for both languages
+      function markCritical(img){
+        return img.closest('.hero-section') || img.closest('.navbar');
+      }
+      document.addEventListener('DOMContentLoaded', function(){
+        document.querySelectorAll('img').forEach(function(img){
+          // Fallback if image fails to load
+          img.addEventListener('error', function(){
+            if (img.src !== FALLBACK_SRC) { img.src = FALLBACK_SRC; }
+          });
+          // Lazy-load non-critical images
+          if (!markCritical(img)) {
+            if (!img.hasAttribute('loading')) img.setAttribute('loading','lazy');
+            img.setAttribute('decoding','async');
+          } else {
+            img.setAttribute('fetchpriority','high');
+            img.setAttribute('loading','eager');
+          }
+        });
+      });
     })();
   </script>
 </body>
