--- a/en/projects.html
+++ b/en/projects.html
@@ -1404,5 +1404,7 @@
   });
 });
 </script>
+  <!-- Global Image Optimizer -->
+  <script src="../js/image-optimizer.js"></script>
 </body>
 </html>
