--- a/en/home.html
+++ b/en/home.html
@@ -1318,5 +1318,7 @@ ScrollTrigger.addEventListener("refresh", () => {});
       });
     })();
   </script>
+  <script>window.$zoho=window.$zoho || {};$zoho.salesiq=$zoho.salesiq||{ready:function(){}}</script><script id="zsiqscript" src="https://salesiq.zohopublic.sa/widget?wc=13db6ed6306365680ee6d9fc9c23c5ee0d1d7bc46cfd2ae639254ee59d65c6c741b89dc700d9e5e43cef537c12760d2535a8b1d4957576eabd5eb77532e36411" defer></script>
+
 </body>
 </html>
