--- a/en/contact.html
+++ b/en/contact.html
@@ -11,7 +11,7 @@
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../css/calma-website.webflow.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="../images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
+  <link rel="icon" href="../images/BRANDMARK_01.png" type="image/png">
   <link href="../images/webclip.jpg" rel="apple-touch-icon">
   <script type="module">
     import { inject } from '@vercel/analytics';
@@ -441,6 +441,7 @@
   </section>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=687744ac7f4aefd284fc3f12" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="../js/webflow.js" type="text/javascript"></script><!--  GSAP + ScrollTrigger  -->
+  <script src="../js/menu.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/split-type@latest"></script>
