--- a/en/home.html
+++ b/en/home.html
@@ -11,7 +11,7 @@
   <link href="../css/webflow.css" rel="stylesheet" type="text/css">
   <link href="../css/calma-website.webflow.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="../images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
+  <link rel="icon" href="../images/BRANDMARK_01.png" type="image/png">
   <link href="../images/webclip.jpg" rel="apple-touch-icon">
   <!-- Preload hero images for reliable above-the-fold rendering -->
   <link rel="preload" as="image" href="../images/Hero-1.JPG">
