--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Author: @Goodnbad.exe
     <link href="css/calma-website.webflow.css" rel="stylesheet" type="text/css">
     <link href="css/rtl-fix.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
+  <link rel="icon" href="images/BRANDMARK_01.png" type="image/png">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
     <!-- Preload hero images for reliable above-the-fold rendering (Arabic) -->
     <link rel="preload" as="image" href="images/Hero-1.JPG">
@@ -242,7 +242,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
                 <div class="hero-image-wrapper">
                   <img src="images/Hero-2.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Hero-2-p-500.jpg 500w, images/Hero-2-p-800.jpg 800w, images/Hero-2-p-1080.jpg 1080w, images/Hero-2.JPG 1439w" alt="" class="image">
                   <div class="hero-project-details-wrapper arabic">
-                    <h4 class="hero-sub-heading arabic">المشروع الرائد</h4>
+                    <h4 class="hero-sub-heading arabic">المشروع الأبرز</h4>
                     <h3 class="hero-project-name">GH220</h3>
                   </div>
                 </div>
@@ -254,7 +254,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
                     <div class="hero-image-wrapper">
                       <img src="images/Hero-1.JPG" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 939.9874877929688px" srcset="images/Hero-1-p-500.jpg 500w, images/Hero-1-p-800.jpg 800w, images/Hero-1-p-1080.jpg 1080w, images/Hero-1.JPG 1439w" alt="" class="image">
                       <div class="hero-project-details-wrapper arabic">
-                        <h4 class="hero-sub-heading arabic">المشروع الرائد</h4>
+                        <h4 class="hero-sub-heading arabic">المشروع الأبرز</h4>
                         <h3 class="hero-project-name arabic">برج ون</h3>
                       </div>
                     </div>
@@ -273,7 +273,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
                   <!-- Project information overlay -->
                   <div class="hero-project-details-wrapper arabic">
                     <!-- Arabic subtitle for project category -->
-                    <h4 class="hero-sub-heading">المشروع الرائد</h4>
+                    <h4 class="hero-sub-heading arabic">المشروع الأبرز</h4>
                     <!-- Project identifier -->
                     <h3 class="hero-project-name">YS190</h3>
                   </div>
@@ -288,7 +288,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
                   <!-- Project details overlay -->
                   <div class="hero-project-details-wrapper arabic">
                     <!-- Arabic project category label -->
-                    <h4 class="hero-sub-heading">المشروع الرائد</h4>
+                    <h4 class="hero-sub-heading arabic">المشروع الأبرز</h4>
                     <!-- Project name -->
                     <h3 class="hero-project-name">YS200</h3>
                   </div>
@@ -303,7 +303,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
                   <!-- Project information overlay -->
                   <div class="hero-project-details-wrapper arabic">
                     <!-- Arabic project category -->
-                    <h4 class="hero-sub-heading">المشروع الرائد</h4>
+                    <h4 class="hero-sub-heading arabic">المشروع الأبرز</h4>
                     <!-- Project name in Arabic: "Calma Tower" -->
                     <h3 class="hero-project-name">برج كالما </h3>
                   </div>
@@ -327,7 +327,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
           <a data-w-id="14be4303-0de3-a018-85e7-fec2584ef701" href="#about" class="scroll w-inline-block">
             <!-- Scroll arrow container with CSS transform for initial positioning -->
             <!-- The inline styles set initial transform state for animations -->
-            <div style="-webkit-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="scroll-arrow-div">
+            <div style="-webkit-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 80px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0); margin-right: 25px;" class="scroll-arrow-div">
               <!-- Arabic text meaning "Scroll" -->
               <h4 class="scroll-heading dark">تمرير</h4>
               <!-- Down arrow icon as SVG -->
@@ -338,11 +338,11 @@ ScrollTrigger.addEventListener('refresh', function(){});
         <div id="about" class="w-layout-blockcontainer container w-container">
           <div class="section-heading-wrapper arabic">
             <div class="section-name-wrapper">
-              <h5 class="section-name dark arabic">عن كالما</h5>
+              <h5 class="section-name dark arabic" style="font-size: 32px;">عن كالما</h5>
             </div>
             <div class="heading-wrapper">
-              <h2 class="section-heading dark arabic">لتأخذ هادفة مساحات نخلق </h2>
-              <h2 class="section-heading zigzag dark arabic"> الحقيقي شكلها  الرؤية .</h2>
+              <h2 class="section-heading dark arabic">نخلق مساحات هادفة </h2>
+              <h2 class="section-heading zigzag dark arabic">لتأخذ الرؤية شكلها الحقيقي .</h2>
             </div>
           </div>
           <div id="w-node-_31eeaa3b-f7cf-7ff9-354e-ab4000307f5e-84fc3f1c" class="w-layout-layout about-quickstack arabic wf-layout-layout">
@@ -381,7 +381,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
                   <div class="pattern-wrapper-div">
                     <h3 class="pattern-heading">٢٨</h3>
                   </div>
-                  <h5 class="pattern-sub-heading">المشاريع المميزة</h5>
+                  <h5 class="pattern-sub-heading" style="font-size: 32px;">مشروع مُنجز</h5>
                 </div>
               </div>
             </div>
@@ -401,7 +401,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
                 <div class="sub-heading-div arabic">
                   <h4 class="sub-heading arabic">هنا تزدهر الإمكانيات.</h4>
                   <div class="grid-para-wrapper">
-                    <p class="paragraph dark arabic">في كالما، لا نبني مجرد مشاريع، بل نبني مجتمعات تنبض بالحياة، وتتجاوز حدود التوقع. بُنيت رؤيتنا لتنسج بين تنوع الثقافات وعمق التقاليد المحلية، لنصنع بيئة يشعر فيها المواطن بالانتماء. من قلب الرياض، إلى امتداد المملكة... نُصيغ تعريف جديد للانتماء.</p>
+                    <p class="paragraph dark arabic">في كالما، لا نكتفي بتطوير العقارات، بل نتصوّر أسلوب حياة عصري جديد. نضع الاستدامة في صميم التصميم، ونلتزم بابتكار مجتمعات تنبض بالحياة. ونجسّد ذلك من خلال مشاريعنا الواعدة والبارزة. نمزج التطوّر بالإرث، ونبني اليوم على أسسٍ تليق بالغد، لنقدّم مساحاتٍ تتجاوز التوقّعات، وتمنح كل مقيم شعورًا بالانتماء والتميّز.</p>
                   </div>
                 </div>
                 <div class="stats-div">
@@ -483,12 +483,27 @@ ScrollTrigger.addEventListener('refresh', function(){});
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
-                      <img src="images/Projects/GH220 الغدير/IMG_1621.jpg" alt="GH220" loading="lazy" class="slide-photo">
+<img src="images/Projects/calma tower/RECEPTION copy.png" alt="Calma Tower" loading="lazy" class="slide-photo">
                       <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
                       <div class="clip-text speaker-headding">
-                        <h5 class="speaker-name">أدوار سكنية</h5>
+                        <h5 class="speaker-name">شقق سكنية</h5>
+                        <h3 class="speaker-name project">Calma Tower</h3>
+                        <h4 class="speaker-name area">حي الصحافة</h4>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="speaker-slide w-slide">
+                  <div class="speaker-slide-content">
+                    <div class="slide-image">
+<img src="images/Projects/GH220 الغدير/IMG_1621.jpg" alt="GH220" loading="lazy" class="slide-photo">
+                      <div class="speaker-image-cover"></div>
+                    </div>
+                    <div class="speaker-info">
+                      <div class="clip-text speaker-headding">
+                        <h5 class="speaker-name">أدوار - تاون هوس سكنية</h5>
                         <h3 class="speaker-name project">GH220</h3>
                         <h4 class="speaker-name area">حي الغدير</h4>
                       </div>
@@ -498,7 +513,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
-                      <img src="images/Projects/HT210 حطين/HT210_-__1_Page_1.png" alt="HT210" loading="lazy" class="slide-photo">
+<img src="images/Projects/HT210 حطين/HT210_-__1_Page_1.png" alt="HT210" loading="lazy" class="slide-photo">
                       <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
@@ -513,7 +528,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
-                      <img src="images/Projects/RM240 الرمال/01.png" alt="RM240" loading="lazy" class="slide-photo">
+<img src="images/Projects/RM240 الرمال/01.png" alt="RM240" loading="lazy" class="slide-photo">
                       <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
@@ -528,7 +543,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
-            <img sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/صور-NK250-dragged-p-500.jpg 500w, images/صور-NK250-dragged-p-800.jpg 800w, images/صور-NK250-dragged-p-1080.jpg 1080w, images/صور-NK250-dragged-p-1600.jpg 1600w, images/صور-NK250-dragged.jpg 1920w" src="images/صور-NK250-dragged.jpg" alt="NK250" loading="lazy" class="slide-photo">
+<img sizes="(max-width: 767px) 100vw, (max-width: 991px) 95vw, 940px" srcset="images/صور-NK250-dragged-p-500.jpg 500w, images/صور-NK250-dragged-p-800.jpg 800w, images/صور-NK250-dragged-p-1080.jpg 1080w, images/صور-NK250-dragged-p-1600.jpg 1600w, images/صور-NK250-dragged.jpg 1920w" src="images/صور-NK250-dragged.jpg" alt="NK250" loading="lazy" class="slide-photo">
                       <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
@@ -544,7 +559,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
-                      <img src="images/Projects/SA230 الصفا/نسخة من 01.png" alt="SA230" loading="lazy" class="slide-photo">
+<img src="images/Projects/SA230 الصفا/نسخة من 01.png" alt="SA230" loading="lazy" class="slide-photo">
                       <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
@@ -574,7 +589,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
                 <div class="speaker-slide w-slide">
                   <div class="speaker-slide-content">
                     <div class="slide-image">
-                      <img src="images/YS200--KALMA-2-1-4.JPG" alt="YS200" loading="lazy" class="slide-photo">
+<img src="images/YS200--KALMA-2-1-4.JPG" alt="YS200" loading="lazy" class="slide-photo">
                       <div class="speaker-image-cover"></div>
                     </div>
                     <div class="speaker-info">
