--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link rel="icon" href="images/BRANDMARK_01.png" type="image/png">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
+  <link rel="preload" as="image" href="images/BRANDMARK_2.png">
   <script>
     window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
   </script>
@@ -63,6 +64,7 @@
   ScrollTrigger.addEventListener("refresh", () => lenis.update());
   ScrollTrigger.refresh();
 </script>
+  <script defer src="js/interactive.js"></script>
   <style>
   .cta-image-wrapper {
     transition: transform 0.5s ease, scale 0.5s ease;
