--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ Author: @Goodnbad.exe
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link rel="icon" href="images/BRANDMARK_01.png" type="image/png">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
+    <link rel="preload" as="image" href="images/BRANDMARK_2.png">
     <!-- Preload hero images for reliable above-the-fold rendering (Arabic) -->
     <link rel="preload" as="image" href="images/Hero-1.JPG">
     <link rel="preload" as="image" href="images/Hero-2.JPG">
@@ -82,6 +83,7 @@ ScrollTrigger.addEventListener('refresh', function(){});
     }
   })();
   </script>
+  <script defer src="js/interactive.js"></script>
   <style>
   .cta-image-wrapper {
     transition: transform 0.5s ease, scale 0.5s ease;
