--- a/projects.html
+++ b/projects.html
@@ -12,6 +12,7 @@
   <link href="css/calma-website.webflow.css" rel="stylesheet" type="text/css">
   <link href="css/layout.css" rel="stylesheet" type="text/css">
   <link rel="preload" as="image" href="images/Basics/SVG/Map.svg" type="image/svg+xml">
+  <link rel="preload" as="image" href="images/BRANDMARK_2.png">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link rel="icon" href="images/BRANDMARK_01.png" type="image/png">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
@@ -19,6 +20,7 @@
     import { inject } from '@vercel/analytics';
     inject();
   </script>
+  <script defer src="js/interactive.js"></script>
   <script>
     // تحميل كسول لصور السلايدر لتسريع عرض الصفحة
     document.addEventListener('DOMContentLoaded', function () {
